<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal"
    tools:context=".fragment.DetailFilmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <ImageView
            android:id="@+id/iv_poster_film"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="30sp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/btn_fav_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mfb_animate_favorite="true"
                app:mfb_animate_unfavorite="true"
                app:mfb_bounce_duration="300"
                app:mfb_color="black"
                app:mfb_favorite_image="@drawable/ic_favorite_black_24dp"
                app:mfb_not_favorite_image="@drawable/ic_favorite_border_black_24dp"
                app:mfb_padding="12"
                app:mfb_rotation_duration="480"
                app:mfb_size="60"
                app:mfb_type="heart" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tanggal_rilis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date" />

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote" />

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

    </LinearLayout>

</FrameLayout>